--- a/pages/redux/redux.wxml
+++ b/pages/redux/redux.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <view>
-  <text>a = {{props.store.a}} </text>
+  <text>a = {{store.a}} </text>
   <view>
     <button bindtap="incA">增加 a</button>
     <button bindtap="decA">减少 a</button>
